# wasm-directory-drop

./: Cargo.toml  README.md  index.html
.cargo/: config.toml
js-example/: index.html  worker.js
