[package]
name = "wasm-directory-drop"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
gloo = "0.11.0"
js-sys = "0.3.76"
log = "0.4.22"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.47"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }

[dependencies.web-sys]
version = "0.3"
features = [
    'AddEventListenerOptions',
    'DataTransfer',
    'DragEvent',
    'DataTransferItem',
    'DataTransferItemList',
    "Blob",
    "BlobPropertyBag",
    "console",
    "DedicatedWorkerGlobalScope",
    "Document",
    "HtmlElement",
    "Location",
    "MessageEvent",
    "Node",
    "Text",
    "Url",
    "Window",
    "Worker",
    "FileSystemEntry",
    "FileSystemDirectoryHandle",
]
